For people that do not like thigh gaps.

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -262,8 +262,8 @@
                 <span onclick="translateLang('fr')">Français</span>
                 <span onclick="translateLang('pt')">Português</span>
                 <span onclick="translateLang('nl')">Nederlands</span>
-				<span onclick="translateLang('jp')">日本語</span>
-				<span onclick="translateLang('tr')">Türkçe</span>
+                <span onclick="translateLang('jp')">日本語</span>
+                <span onclick="translateLang('tr')">Türkçe</span>
             </div>
             <div class="webonly" style="width:728px;margin:0 auto">
                 <SCRIPT language="Javascript">
@@ -448,7 +448,7 @@
         <div style="color:white; width:970px; margin:0 auto;">
             <section id="settings">
                 <div class='section-content'>
-                    <div style="width: 29%;float: left;color: #aaa;margin-right: 4vw;font-size: 11px;text-align: justify;">
+                    <div style="width: 29%;float: left;color: #aaa;margin-right: 4vw;font-size: 11px;">
                         <p data-translation-autoplacementwillhavethegameautomaticllypickwherecardsareplaced>Auto Placement will have the game automaticlly pick where cards are placed.</p>
                         <p data-translation-ifautoplacementisonyoucanrandomizeit>If Auto Placement is on, you can randomize it.</p>
                         <p data-translation-ifyouselectedmultiplecardsinresponsetoachainsuggestionyoumayhavethegameautomaticallypicktheresolutionorderifautoplacementisonyoucanrandomizeit>If you selected multiple cards in response to a chain suggestion. You may have the game automatically pick the resolution order. If Auto Placement is on, you can randomize it.</p>
@@ -513,12 +513,12 @@
                         <br />
                         <label></label>
                         <button data-translation-viewygoprofolder onclick="ygopro('-c')" style="float:left">View YGOPro Folder</button>
-						<br />
-						<br />
-						<h3 data-translation-launchersettings style="text-align: left; border-top: 1px solid silver; padding-top: 10px; color: silver">Launcher Settings</h3>
-						<label data-translation-refuseduelrequests>Refuse Duel Requests</label>
-						<input type="checkbox" data-localhost="refuse_duel_requests">
-					</div>
+                        <br />
+                        <br />
+                        <h3 data-translation-launchersettings style="text-align: left; border-top: 1px solid silver; padding-top: 10px; color: silver">Launcher Settings</h3>
+                        <label data-translation-refuseduelrequests>Refuse Duel Requests</label>
+                        <input type="checkbox" data-localhost="refuse_duel_requests">
+                    </div>
                 </div>
             </section>
         </div>
