Thighgap now with a bigger butt.

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -448,7 +448,7 @@
         <div style="color:white; width:970px; margin:0 auto;">
             <section id="settings">
                 <div class='section-content'>
-                    <div style="width: 29%;float: left;color: #aaa;margin-right: 4vw;font-size: 11px;">
+                    <div style="width: 29%;float: left;color: #aaa;margin-right: 4vw;">
                         <p data-translation-autoplacementwillhavethegameautomaticllypickwherecardsareplaced>Auto Placement will have the game automaticlly pick where cards are placed.</p>
                         <p data-translation-ifautoplacementisonyoucanrandomizeit>If Auto Placement is on, you can randomize it.</p>
                         <p data-translation-ifyouselectedmultiplecardsinresponsetoachainsuggestionyoumayhavethegameautomaticallypicktheresolutionorderifautoplacementisonyoucanrandomizeit>If you selected multiple cards in response to a chain suggestion. You may have the game automatically pick the resolution order. If Auto Placement is on, you can randomize it.</p>
