added arabic, updated dutch

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -266,6 +266,7 @@
                 <span onclick="translateLang('tr')">Türkçe</span>
 
                 <span onclick="translateLang('fa')">فارسی</span>
+                <span onclick="translateLang('ar')">لغة عربي</span>
             </div>
             <div class="webonly" style="width:728px;margin:0 auto">
                 <SCRIPT language="Javascript">
@@ -531,6 +532,7 @@
                             <option value="tr">Türkçe</option>
                             <option value="jp">日本語</option>
                             <option value="fa">فارسی</option>
+                            <option value="ar">لغة عربي</option>
                         </select>
                     </div>
                 </div>
