--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -4,7 +4,14 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<!--<link rel="stylesheet" href="css/deck-edit.css">-->
 		<script src="js/ConfigParser.js"></script>
+		<script src="js/jquery-1.11.0.min.js"></script>
 		<script src="js/deck-edit.js"></script>
+		<style>
+			/* Visualization help. */
+			html * {
+				border: 1px solid black;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="mainContainer">
