Added setcode filter

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -118,6 +118,10 @@
 							<option value="8388608">Wyrm</option>
 						</select>
 						<br />
+						<label for="setcodeSelect">Archetype</label>
+						<select id="setcodeSelect">
+						</select>
+						<br />
 						<label for="levelInput">Level/Rank</label>
 						<input id="levelInput" type="number" min="1" max="12">
 						<br />
