--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -2,16 +2,10 @@
 	<head>
 		<title>Salvation Pro | Deck Editor</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<!--<link rel="stylesheet" href="css/deck-edit.css">-->
+		<link rel="stylesheet" type="text/css" href="css/deck-edit.css">
 		<script src="js/ConfigParser.js"></script>
 		<script src="js/jquery-1.11.0.min.js"></script>
 		<script src="js/deck-edit.js"></script>
-		<style>
-			/* Visualization help. */
-			html * {
-				border: 1px solid black;
-			}
-		</style>
 	</head>
 	<body>
 		<div id="mainContainer">
