Fix Ferrin's English Pedantic Plebian shit

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -62,14 +62,14 @@
 						<select id="spellSelect">
 							<option value="2">Normal</option>
 							<option value="65538">Quick-Play</option>
-							<option value="131074">Permanent</option>
+							<option value="131074">Continuous</option>
 							<option value="130">Ritual</option>
 							<option value="262146">Equip</option>
 							<option value="524290">Field</option>
 						</select>
 						<select id="trapSelect">
 							<option value="4">Normal</option>
-							<option value="131076">Permanent</option>
+							<option value="131076">Continuous</option>
 							<option value="1048580">Counter</option>
 						</select>
 						<br />
