part one done-ish.

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -33,9 +33,11 @@
                 <input type="text" id="decknameInput">
                 <button id="saveDeckAs">Save as</button>
                 <br />
-                <button id="shuffleDeck">Shuffle</button>
-                <button id="sortDeck">Sort</button>
-                <button id="clearDeck">Clear</button>
+                <div id="clearsortshufflewrapper">
+                    <button id="shuffleDeck">Shuffle</button>
+                    <button id="sortDeck">Sort</button>
+                    <button id="clearDeck">Clear</button>
+                </div>
             </div>
             <div id="searchRight">
                 <div class="searchBlock">
