Updates to deckEditor and deck-edit

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -79,6 +79,7 @@
                     <br />
                     <label for="attributeSelect">Attribute</label>
                     <select id="attributeSelect" data-input-attribute>
+						<option></option>
                         <option value="1">EARTH</option>
                         <option value="2">WATER</option>
                         <option value="4">FIRE</option>
@@ -90,6 +91,7 @@
                     <br />
                     <label for="raceSelect">Type</label>
                     <select id="raceSelect" data-input-race>
+						<option></option>
                         <option value="1">Warrior</option>
                         <option value="2">Spellcaster</option>
                         <option value="4">Fairy</option>
@@ -118,6 +120,7 @@
                     <br />
                     <label for="setcodeSelect">Archetype</label>
                     <select id="setcodeSelect" data-input-setcode>
+						<option></option>
                     </select>
                     <br />
                     <label for="levelInput">Level/Rank</label>
@@ -151,9 +154,6 @@
                     <button id="searchButton">Search</button>
                 </div>
             </div>
-            <span id="hiddenInputContainer">
-					<input type="hidden" data-input-type>
-				</span>
         </div>
         <div id="center">
             <div id="mainDeck">
