--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -49,6 +49,7 @@
                         <option value="4">Traps</option>
                     </select>
                     <select id="monsterSelect">
+						<option value="17">Specify a card type</option>
                         <option value="17">Normal</option>
                         <option value="33">Effect</option>
                         <option value="97">Fusion</option>
@@ -64,6 +65,7 @@
                         <option value="16777249">Pendulum</option>
                     </select>
                     <select id="spellSelect">
+						<option value="2">Specify a card type</option>
                         <option value="2">Normal</option>
                         <option value="65538">Quick-Play</option>
                         <option value="131074">Continuous</option>
@@ -72,6 +74,7 @@
                         <option value="524290">Field</option>
                     </select>
                     <select id="trapSelect">
+						<option value="4">Specify a card type</option>
                         <option value="4">Normal</option>
                         <option value="131076">Continuous</option>
                         <option value="1048580">Counter</option>
@@ -79,7 +82,7 @@
                     <br />
                     <label for="attributeSelect">Attribute</label>
                     <select id="attributeSelect" data-input-attribute>
-						<option></option>
+						<option>Specify an attribute</option>
                         <option value="1">EARTH</option>
                         <option value="2">WATER</option>
                         <option value="4">FIRE</option>
@@ -91,7 +94,7 @@
                     <br />
                     <label for="raceSelect">Type</label>
                     <select id="raceSelect" data-input-race>
-						<option></option>
+						<option>Specify a Monster type</option>
                         <option value="1">Warrior</option>
                         <option value="2">Spellcaster</option>
                         <option value="4">Fairy</option>
@@ -120,7 +123,7 @@
                     <br />
                     <label for="setcodeSelect">Archetype</label>
                     <select id="setcodeSelect" data-input-setcode>
-						<option></option>
+						<option>Specify a card archetype</option>
                     </select>
                     <br />
                     <label for="levelInput">Level/Rank</label>
