Option values empty for default

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -82,7 +82,7 @@
                     <br />
                     <label for="attributeSelect">Attribute</label>
                     <select class="attributeSelect" data-input-attribute>
-						<option>Specify an attribute</option>
+						<option value="">Specify an attribute</option>
                         <option value="1">EARTH</option>
                         <option value="2">WATER</option>
                         <option value="4">FIRE</option>
@@ -94,7 +94,7 @@
                     <br />
                     <label for="raceSelect">Type</label>
                     <select class="raceSelect" data-input-race>
-						<option>Specify a Monster type</option>
+						<option value="">Specify a Monster type</option>
                         <option value="1">Warrior</option>
                         <option value="2">Spellcaster</option>
                         <option value="4">Fairy</option>
@@ -123,7 +123,7 @@
                     <br />
                     <label for="setcodeSelect">Archetype</label>
                     <select class="setcodeSelect" data-input-setcode>
-						<option>Specify a card archetype</option>
+						<option value="">Specify a card archetype</option>
                     </select>
                     <br />
                     <label for="levelInput">Level/Rank</label>
