--- a/server/http/index.html
+++ b/server/http/index.html
@@ -259,7 +259,7 @@
                 <span onclick="translateLang('en')">English</span>
                 <span onclick="translateLang('es')">Español</span>
                 <span onclick="translateLang('de')">Deutsch</span>
-                <span onclick="translateLang('fr')">Français</span>
+                <span onclick="translateLang('fr-ca')">Français(Québec)</span>
                 <span onclick="translateLang('pt')">Português</span>
                 <span onclick="translateLang('nl')">Nederlands</span>
                 <span onclick="translateLang('jp')">日本語</span>
@@ -526,7 +526,7 @@
                             <option value="en">English</option>
                             <option value="es">Español</option>
                             <option value="de">Deutsch</option>
-                            <option value="fr">Français</option>
+                            <option value="fr-ca">Français(Québec)</option>
                             <option value="pt">Português</option>
                             <option value="nl">Nederlands</option>
                             <option value="tr">Türkçe</option>
