--- a/server/http/index.html
+++ b/server/http/index.html
@@ -259,15 +259,15 @@
                 <span onclick="translateLang('en')">English</span>
                 <span onclick="translateLang('es')">Español</span>
                 <span onclick="translateLang('de')">Deutsch</span>
-		<span onclick="translateLang('fr')">Français(France)</span>
+                <span onclick="translateLang('fr')">Français(France)</span>
                 <span onclick="translateLang('fr-ca')">Français(Québec)</span>
                 <span onclick="translateLang('pt')">Português</span>
                 <span onclick="translateLang('nl')">Nederlands</span>
                 <span onclick="translateLang('jp')">日本語</span>
                 <span onclick="translateLang('tr')">Türkçe</span>
-
                 <span onclick="translateLang('fa')">فارسی</span>
                 <span onclick="translateLang('ar')">لغةعربي</span>
+                <span onclick="translateLang('zh')">中文(简体)</span>
             </div>
             <div class="webonly" style="width:728px;margin:0 auto">
                 <SCRIPT language="Javascript">
@@ -527,7 +527,7 @@
                             <option value="en">English</option>
                             <option value="es">Español</option>
                             <option value="de">Deutsch</option>
-			    <option value="fr">Français(France)</option>
+                            <option value="fr">Français(France)</option>
                             <option value="fr-ca">Français(Québec)</option>
                             <option value="pt">Português</option>
                             <option value="nl">Nederlands</option>
