--- a/server/http/ydkToList.html
+++ b/server/http/ydkToList.html
@@ -5,8 +5,7 @@
 		<script src="js/jquery-1.11.0.min.js"></script>
 		<script src="js/parseYDK.js"></script>
 		<script>
-			var cards = [],
-				list;
+			var cards = [];
 			$(function(){
 				$.getJSON('manifest/database.json', function(data) {
 					cards = data;
@@ -15,13 +14,12 @@
 							reader = new FileReader();
 						reader.readAsText(file);
 						reader.onload = function(e) {
-							/*var list = parseYDK(e.target.result);
+							var list = parseYDK(e.target.result);
 							console.log(ydkToList(list, {
 								multipleEntries: true,
 								formatString: "x%i",
 								cards: cards
-							}));*/
-							list = e.target.result;
+							}));
 						};
 					});
 				});
