swapped the position of the X

--- a/server/http/ydkToList.html
+++ b/server/http/ydkToList.html
@@ -18,7 +18,7 @@
 							list = parseYDK(e.target.result);
 							$('#output').html('<pre>' + ydkToList(list, {
 								multipleEntries: true,
-								formatString: "x%i",
+								formatString: "%ix",
 								cards: cards
 							}) + '</pre>');
 						};
