First step to YDK listing

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -371,6 +371,10 @@
         </section>
     </header>
     <header style="padding-top:50px" id="deckedit">
+		<script src="js/parseYDK.js"></script>
+		<script>
+			console.log("Deck Edit: " + process.list);
+		</script>
         <div id="deckwrapper">
             <div id="de_column1">
                 <div id="cardpic"></div>
