--- a/server/http/index.html
+++ b/server/http/index.html
@@ -373,8 +373,11 @@
     <header style="padding-top:50px" id="deckedit">
 		<script src="js/parseYDK.js"></script>
 		<script>
-			console.log("Deck Edit: " + process.list);
+			$(function(){
+				getDecklists(fillSelect);
+			});
 		</script>
+		<select id="ydkListSelect" style="display: none;"></select>
         <div id="deckwrapper">
             <div id="de_column1">
                 <div id="cardpic"></div>
