--- a/server/http/index.html
+++ b/server/http/index.html
@@ -371,12 +371,12 @@
         </section>
     </header>
     <header style="padding-top:50px" id="deckedit">
-		<script src="js/parseYDK.js"></script>
+		<!--<script src="js/parseYDK.js"></script>
 		<script>
 			$(function(){
 				getDecklists(fillSelect);
 			});
-		</script>
+		</script>-->
 		<select id="ydkListSelect" style="display: none;"></select>
         <div id="deckwrapper">
             <div id="de_column1">
