Fixing type stuff

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -48,24 +48,24 @@
                         <option value="2">Spells</option>
                         <option value="4">Traps</option>
                     </select>
-                    <select class="monsterSelect">
-						<option value="17">Specify a card type</option>
-                        <option value="17">Normal</option>
-                        <option value="33">Effect</option>
-                        <option value="97">Fusion</option>
-                        <option value="161">Ritual</option>
-                        <option value="8225">Synchro</option>
-                        <option value="8388641">Xyz</option>
-                        <option value="4129">Tuner</option>
-                        <option value="94944637">Gemini</option>
-                        <option value="1057">Union</option>
-                        <option value="545">Spirit</option>
-                        <option value="2097185">Flip</option>
-                        <option value="4194337">Toon</option>
-                        <option value="16777249">Pendulum</option>
+                    <select class="monsterCardSelect">
+                        <option value>Specify a monster type</option>
+                        <option value="16">Normal</option>
+                        <option value="32">Effect</option>
+                        <option value="544">Spirit</option>
+                        <option value="1056">Union</option>
+                        <option value="4194336">Toon</option>
+                    </select>
+                    <select class="monsterTypeSelect">
+                        <option value>Specify a monster type</option>
+                        <option value="64">Fusion</option>
+                        <option value="128">Ritual</option>
+                        <option value="8192">Synchro</option>
+                        <option value="8388608">Xyz</option>
+                        <option value="16777216">Pendulum</option>
                     </select>
                     <select class="spellSelect">
-						<option value="2">Specify a card type</option>
+                        <option value="2">Specify a card type</option>
                         <option value="2">Normal</option>
                         <option value="65538">Quick-Play</option>
                         <option value="131074">Continuous</option>
@@ -74,7 +74,7 @@
                         <option value="524290">Field</option>
                     </select>
                     <select class="trapSelect">
-						<option value="4">Specify a card type</option>
+                        <option value="4">Specify a card type</option>
                         <option value="4">Normal</option>
                         <option value="131076">Continuous</option>
                         <option value="1048580">Counter</option>
@@ -82,7 +82,7 @@
                     <br />
                     <label for="attributeSelect">Attribute</label>
                     <select class="attributeSelect" data-input-attribute>
-						<option value="">Specify an attribute</option>
+                        <option value="">Specify an attribute</option>
                         <option value="1">EARTH</option>
                         <option value="2">WATER</option>
                         <option value="4">FIRE</option>
@@ -94,7 +94,7 @@
                     <br />
                     <label for="raceSelect">Type</label>
                     <select class="raceSelect" data-input-race>
-						<option value="">Specify a Monster type</option>
+                        <option value="">Specify a Monster type</option>
                         <option value="1">Warrior</option>
                         <option value="2">Spellcaster</option>
                         <option value="4">Fairy</option>
@@ -123,7 +123,7 @@
                     <br />
                     <label for="setcodeSelect">Archetype</label>
                     <select class="setcodeSelect" data-input-setcode>
-						<option value="">Specify a card archetype</option>
+                        <option value="">Specify a card archetype</option>
                     </select>
                     <br />
                     <label for="levelInput">Level/Rank</label>
