Added tuner to the combobox

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -54,6 +54,7 @@
                         <option value="32">Effect</option>
                         <option value="544">Spirit</option>
                         <option value="1056">Union</option>
+                        <option value="4096">Tuner</option>
                         <option value="4194336">Toon</option>
                     </select>
                     <select class="monsterTypeSelect">
