Revert "Update launcher.html"
This reverts commit cd6952ac6f262829d8c8733d3e7ea5785d6f81ed.

--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -52,6 +52,7 @@
     <link rel="stylesheet" href="css/viewanimations.css">
     <link rel="stylesheet" href="css/z-index.css">
 
+    <script src="js/vendor/primus.js"></script>
     <script src="js/vendor/jquery-1.11.0.min.js"></script>
 </head>
 
