added zh to dropdown

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -541,6 +541,7 @@
                             <option value="nl">Nederlands</option>
                             <option value="tr">Türkçe</option>
                             <option value="jp">日本語</option>
+							<option value="zh">中文(简体)</option>
                             <option value="fa">فارسی</option>
                             <option value="ar">لغة عربي</option>
                         </select>
