--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -13,7 +13,7 @@
     <div class="mainContainer">
         <div class="left">
             <div class="cardImage">
-                <img src="" />
+                <img class="imgContainer" src="" />
             </div>
             <div class="cardDescription">
             </div>
