--- a/server/http/index.html
+++ b/server/http/index.html
@@ -215,7 +215,7 @@
                 <ul class="webonly" style="text-align:center; padding:0;" id="mirrors" itemscope itemtype="http://schema.org/SoftwareApplication">
                     <!--<li>Login</li>
                 <li>Sign Up</li>-->
-                    <li><a data-translation-playnow href="https://mega.co.nz/#!q1gW2CTS!oyP2CrbrVaMEhVIvHJ878IU2FviiFtrkBqRouzkFFJw" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Full Windows']);">Full Windows Client </a>
+                    <li><a data-translation-playnow href="https://drive.google.com/file/d/0B20SNNA74_RsdTh3bko0QlVjem8/view" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Full Windows']);">Full Windows Client </a>
 
                     </li>
                     <!--
