Revert "step one of adding trad"
This reverts commit dde38c3a1880f49906f6c6d9e2688bac2f4a6702.

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -267,7 +267,7 @@
                 <span onclick="translateLang('tr')">Türkçe</span>
                 <span onclick="translateLang('fa')">فارسی</span>
                 <span onclick="translateLang('ar')">لغةعربي</span>
-                <span onclick="translateLang('zh-hans')">中文(简体)</span>
+                <span onclick="translateLang('zh')">中文(简体)</span>
             </div>
             <div class="webonly" style="width:728px;margin:0 auto">
                 <SCRIPT language="Javascript">
@@ -541,7 +541,7 @@
                             <option value="nl">Nederlands</option>
                             <option value="tr">Türkçe</option>
                             <option value="jp">日本語</option>
-							<option value="zh-hans">中文(简体)</option>
+							<option value="zh">中文(简体)</option>
                             <option value="fa">فارسی</option>
                             <option value="ar">لغة عربي</option>
                         </select>
