Adding UI to Deck Builder

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/deck-edit.css">
     <script src="js/ConfigParser.js"></script>
     <script src="js/jquery-1.11.0.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
     <script src="js/deck-edit.js"></script>
 </head>
 
