Row generator soon™

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -8,6 +8,7 @@
     <script src="js/jquery-1.11.0.min.js"></script>
 	<script src="js/jquery-ui.min.js"></script>
     <script src="js/deck-edit.js"></script>
+	<script src="js/generate-row.js"></script>
 </head>
 
 <body>
@@ -162,10 +163,20 @@
         </div>
         <div class="center">
             <div class="mainDeck">
+				<div class="mainDeckRow">
+					<span class="generateRow" data-amount-x="15" data-amount-y="4">
+					</span>
+				</div>
             </div>
             <div class="extraDeck">
+				<div class="extraDeckRow">
+					<span class="generateRow" data-amount-x="15">
+					</span>
+				</div>
             </div>
             <div class="sideDeck">
+				<span class="extraDeckRow" data-amount-x="15">
+				</span>
             </div>
         </div>
         <div class="right">
