Fixing some HTML with the row generator

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -175,9 +175,11 @@
 				</div>
             </div>
             <div class="sideDeck">
-				<span class="extraDeckRow" data-amount-x="15">
-				</span>
-            </div>
+				<div class="sideDeckRow">
+					<span class="generateRow" data-amount-x="15">
+					</span>
+				</div>
+			</div>
         </div>
         <div class="right">
             <div class="searchResults">
